resources/assets/sass/global.scss
/* ... */
  .breadcrumbs{
    ul{
      li{
        list-style-type: none;
        display: inline-block;
        position: relative;
        &:after{
          content: ">";
          position: absolute;
          top: 4px;
          right: 2px;
          font-size: 11px;
          color: $white;
        }
        &:last-child {
            &:after{
              content: " ";
            }
        }
        a{
          color: $white;
          text-decoration: none;
          padding-right: 14px;
          font-size: 12px;
          &.active{
            text-decoration: underline;
          } 
          &:hover{
            color: $lightblue;
          }
        }
      }
    }
  }
  .breadcrumbs2{
      padding: 20px 0;
      ul{
        li{
          list-style-type: none;
          display: inline-block;
          position: relative;
          &:after{
            content: ">";
            position: absolute;
            top: 4px;
            right: 2px;
            font-size: 11px;
            color: $black;
          }
          &:last-child {
              &:after{
                content: " ";
              }
              a{
                color: $graytext;
                &:hover{
                  color: $graytext;
                }
              }
          }
          a{
            color: $black;
            text-decoration: none;
            padding-right: 14px;
            font-size: 12px;
            &:hover{
              color: $lightblue;
            }
          }
        }
      }
  }
  .input-wrapper{
    label{
      display: block;
      margin-bottom: 6px;
      margin-top: 7px;
      @extend %info-font;
      sup{
        color: $red;
      }
    }
    .radio-inline{
      display: inline-block;
      margin-right: 10px;
      margin-top: 5px;
      input{
        display: none;
      }
      label{
        display: inline;
        @extend %bold-font;
        cursor: pointer;
        transition: 3s all;
        line-height: 1.7;
        position: relative;
        .mark{
            width: 19px;
            height: 19px;
            padding: 2px;
            margin-right: 6px;
            border: 1px solid $border;
            border-radius: 100%;
            display: inline-block;
            vertical-align: middle;
            transition: all 1s ease;
            position: absolute;
            top: 0;
            left: 0;
          span{
            width: 13px;
            height: 13px;
            display: block;
            background-color: transparent;
            border-radius: 100%;
            transition: all 1s ease;
          }
        }
        .text{
          padding-left: 30px;
          display: -ms-inline-grid;
        }
      }
      input:checked ~ label{
        .mark{
          border: 1px solid $blue;
          span{
            background-color: $blue;
          }
        }
      } 
    }
    .checklist-inline{
      display: inline-block;
      margin-right: 10px;
      margin-top: 5px;
      input{
        display: none;
      }
      label{
        @extend %info-font;
        display: inline;
        cursor: pointer;
        transition: 3s all;
        line-height: 1.7;
        position: relative;
        .mark{
          width: 21px;
            height: 21px;
            padding: 3px;
            margin-right: 10px;
            border: 1px solid $border;
            display: inline-block;
            display: -moz-inline-stack;
            vertical-align: middle;
            transition: all 1s ease;
            position: absolute;
            top: 0;
            left: 0;
          span{
            width: 14px;
            height: 7px;
            transform: rotate(-45deg);
            display: block;
            transition: all 1s ease;
            border-left: 2px solid $white;
            border-bottom: 2px solid $white;  
          }
        }
        .text{
           padding-left: 30px;
           display: -ms-inline-grid;
        }
      }
      input:checked ~ label{
        .mark{
          border: 1px solid $blue;
          span{
            width: 14px;
            height: 7px;
            transform: rotate(-45deg);
            display: block;
            border-left: 2px solid $blue;
            border-bottom: 2px solid $blue; 
          }
        }
      }
    }
    .input-field{
      height: 38px;
      margin-bottom: 15px;
      padding: 10px;
      width: 100%;
      background-color: $gray;
      outline: 0;
      border: 0;
      @extend %info-font;
      font-size: 14px;
    }
    .input-textarea{
      height: 75px;
      margin-bottom: 15px;
      padding: 10px;
      width: 100%;
      line-height: 1.5;
      background-color: $gray;
      outline: 0;
      border: 0;
      @extend %info-font;
    }
    .select-field{
      width: 100%;
      padding: 6px 7px;
      height: 38px;
      font-size: 14px;
      margin-bottom: 20px;
      background-color: $gray;
      @extend %info-font;
      border: 0;
      outline: 0;
      cursor: pointer;
      option{
        outline: 0;
      }
    }
  }
/* ... */

